--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg shadow" >
   <div class="container-fluid">
-    <a class="navbar-brand ps-3" href="#">
+    <a class="navbar-brand ps-3" href="/home">
       <img
         src="images/logo5.png"
         alt="Header"
